--- a/Dockerfile_build
+++ b/Dockerfile_build
@@ -36,10 +36,10 @@ ARG PORT
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
-COPY --from=builder /src/${BIN}/build/${BIN} /usr/bin/${BIN}
+COPY --from=builder /src/${BIN}/build/${BIN} /${BIN}
 
 EXPOSE ${PORT}
 
 USER ${BIN}:${BIN}
 
-ENTRYPOINT [ "/usr/bin/" ]
+ENTRYPOINT [ "/" ]
