Update test workflow in respect to go get deprecation

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Download dependencies
       run: |
-        go get .
+        go install .
         go install golang.org/x/vuln/cmd/govulncheck@latest
 
     - name: Run tests
